다시 0.008로 변경

--- a/binance_auto.ipynb
+++ b/binance_auto.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "905a1cdf",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "93536e30",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "d213afe7",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "c450d5a2",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'free': 80.32177868, 'used': 3.299168, 'total': 83.60923569}\n"
+      "{'free': 81.90301911, 'used': 3.795255, 'total': 85.49816361}\n"
      ]
     }
    ],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 5,
    "id": "95880f48",
    "metadata": {},
    "outputs": [
@@ -415,9 +415,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'symbol': 'ETHUSDT', 'initialMargin': '0', 'maintMargin': '0', 'unrealizedProfit': '0.00000000', 'positionInitialMargin': '0', 'openOrderInitialMargin': '0', 'leverage': '10', 'isolated': True, 'entryPrice': '0.0', 'maxNotional': '4000000', 'positionSide': 'BOTH', 'positionAmt': '0.000', 'notional': '0', 'isolatedWallet': '0', 'updateTime': '1634491502625'}\n",
+      "{'symbol': 'ETHUSDT', 'initialMargin': '3.79443600', 'maintMargin': '0.18972180', 'unrealizedProfit': '-0.16686000', 'positionInitialMargin': '3.79443600', 'openOrderInitialMargin': '0', 'leverage': '10', 'isolated': True, 'entryPrice': '4197.5', 'maxNotional': '4000000', 'positionSide': 'BOTH', 'positionAmt': '-0.009', 'notional': '-37.94436000', 'isolatedWallet': '3.77019450', 'updateTime': '1635199838299'}\n",
       "False\n",
-      "0.0\n"
+      "4197.5\n"
      ]
     }
    ],
