물탈때 주문 넣고, 기존 주문 모두 캔슬한 후에 3초 쉬기
2배 산 후에 3번째 살때 2배로 산 양 나오는 버그 해결

Ex) 0.1 / 0.2 / 0.2 / 0.4

--- a/binance_auto.ipynb
+++ b/binance_auto.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "905a1cdf",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "93536e30",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "d213afe7",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "38124c7f",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "c450d5a2",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'free': 86.03054328, 'used': 0.0, 'total': 86.03054328}\n"
+      "{'free': 714.1194087, 'used': 112.83651, 'total': 830.1397808}\n"
      ]
     }
    ],
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "95880f48",
    "metadata": {},
    "outputs": [
@@ -362,9 +362,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'symbol': 'ETHUSDT', 'initialMargin': '3.79443600', 'maintMargin': '0.18972180', 'unrealizedProfit': '-0.16686000', 'positionInitialMargin': '3.79443600', 'openOrderInitialMargin': '0', 'leverage': '10', 'isolated': True, 'entryPrice': '4197.5', 'maxNotional': '4000000', 'positionSide': 'BOTH', 'positionAmt': '-0.009', 'notional': '-37.94436000', 'isolatedWallet': '3.77019450', 'updateTime': '1635199838299'}\n",
-      "False\n",
-      "4197.5\n"
+      "{'symbol': 'ETHUSDT', 'initialMargin': '0', 'maintMargin': '0', 'unrealizedProfit': '0.00000000', 'positionInitialMargin': '0', 'openOrderInitialMargin': '0', 'leverage': '10', 'isolated': True, 'entryPrice': '0.0', 'maxNotional': '4000000', 'positionSide': 'BOTH', 'positionAmt': '0.000', 'notional': '0', 'isolatedWallet': '0', 'updateTime': '1635437233699'}\n"
      ]
     }
    ],
@@ -372,9 +370,7 @@
     "# 현재 포지션 확인\n",
     "balance = binance.fetch_balance()\n",
     "position = [x for x in balance['info']['positions'] if x['symbol'] == \"ETHUSDT\"][0]\n",
-    "print(position)\n",
-    "print(float(position[\"positionAmt\"]) > 0)\n",
-    "print(position[\"entryPrice\"])"
+    "print(position)"
    ]
   },
   {
@@ -386,7 +382,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "4167.03"
       ]
      },
      "execution_count": 6,
