물 타다가 돈 다 떨어지면 stop loss 걸도록 수정

--- a/binance_auto.ipynb
+++ b/binance_auto.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "c450d5a2",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'free': 714.1194087, 'used': 112.83651, 'total': 830.1397808}\n"
+      "{'free': 621.29971885, 'used': 0.0, 'total': 621.29971885}\n",
+      "<class 'float'>\n"
      ]
     }
    ],
@@ -78,8 +79,31 @@
     "        'defaultType': 'future'\n",
     "    }\n",
     "})\n",
-    "balance = binance.fetch_balance(params={\"type\": \"future\"})\n",
-    "print(balance['USDT'])"
+    "balance = binance.fetch_balance()\n",
+    "print(balance['USDT'])\n",
+    "print(type(balance[\"USDT\"][\"free\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b09ef6c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4703.79 4765.0 4452.53 4522.01\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 현재가 조회\n",
+    "ticker = binance.fetch_ticker('ETH/USDT')\n",
+    "print(ticker['open'], ticker['high'], ticker['low'], ticker['close'])\n",
+    "print(type(ticker[\"close\"]))"
    ]
   },
   {
@@ -231,6 +255,16 @@
    "metadata": {},
    "source": [
     "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38268510",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json"
    ]
   },
   {
